# CMakeList.txt : CMake project for HomeWork_HM_7, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (HomeWork_HM_7 "HomeWork_HM_7.cpp" "HomeWork_HM_7.h")

# TODO: Add tests and install targets if needed.
